opam-version: "2.0"
synopsis: "A client for irmin-server"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-server"
doc: "https://zshipko.github.io/irmin-server"
bug-reports: "https://github.com/zshipko/irmin-server/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "irmin-client" {= version}
  "irmin-unix" {>= "3.1"}
]
pin-depends: [
  ["graphql.dev" "git+https://github.com/andreas/ocaml-graphql-server#520ccd4013943ee0b2557aa66367b83aaa67084c"]
  ["graphql-cohttp.dev" "git+https://github.com/andreas/ocaml-graphql-server#520ccd4013943ee0b2557aa66367b83aaa67084c"]
  ["irmin-graphql.3.2.1" "git+https://github.com/patricoferris/irmin#83f5a5401bb3273a84959e5e427e6af884c00a6a"]
  ["irmin-unix.3.2.1" "git+https://github.com/patricoferris/irmin#83f5a5401bb3273a84959e5e427e6af884c00a6a"]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/zshipko/irmin-server"
