opam-version: "2.0"
synopsis: "A client for irmin-server"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-server"
doc: "https://zshipko.github.io/irmin-server"
bug-reports: "https://github.com/zshipko/irmin-server/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "irmin-client" {= version}
  "irmin-unix" {>= "dev"}
]
pin-depends: [
  ["graphql.dev" "git+https://github.com/zshipko/ocaml-graphql-server#b2be4daeca46005ddbe79f6e8a38a9c272af0fb5"]
  ["graphql-cohttp.dev" "git+https://github.com/zshipko/ocaml-graphql-server#b2be4daeca46005ddbe79f6e8a38a9c272af0fb5"]
  ["irmin-graphql.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-unix.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-pack.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-git.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-fs.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-http.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-tezos.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["irmin-test.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
  ["ppx_irmin.dev" "git+https://github.com/patricoferris/irmin#4949da37cfa44e18cc2ca357705e6c9a8ff1ad9d"]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/zshipko/irmin-server"
