opam-version: "2.0"
synopsis: "A high-performance server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-server"
doc: "https://zshipko.github.io/irmin-server"
bug-reports: "https://github.com/zshipko/irmin-server/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "irmin-server" {= version}
  "irmin-unix" {>= "3.1"}
]
pin-depends: [ 
  [ "ocaml-graphql-server.dev" "git+https://github.com/andreas/ocaml-graphql-server/commit/520ccd4013943ee0b2557aa66367b83aaa67084c" ]
  ["irmin-unix.dev" "git+https://github.com/patricoferris/irmin/commit/83f5a5401bb3273a84959e5e427e6af884c00a6a"]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/zshipko/irmin-server"
