opam-version: "2.0"
synopsis: "A high-performance server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-server"
doc: "https://zshipko.github.io/irmin-server"
bug-reports: "https://github.com/zshipko/irmin-server/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "optint" {>= "0.1.0"}
  "irmin" {>= "dev"}
  "uri"
  "fmt"
  "checkseum" {>= "0.3.0"}
  "cmdliner" {>= "1.0.4"}
  "digestif" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.4.0"}
  "ppx_irmin" {>= "dev"}
]
pin-depends: [
  ["irmin.dev" "git+https://github.com/patricoferris/irmin#5876116b6c468ce2a4a94e112257bc71f8288cb1"]
  ["ppx_irmin.dev" "git+https://github.com/patricoferris/irmin#5876116b6c468ce2a4a94e112257bc71f8288cb1"]
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
