opam-version: "2.0"
synopsis: "A high-performance server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-server"
doc: "https://zshipko.github.io/irmin-server"
bug-reports: "https://github.com/zshipko/irmin-server/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "optint" {>= "0.1.0"}
  "irmin"
  "irmin-pack" {>= "dev"}
  "irmin-unix" {>= "dev"}
  "irmin-tezos" {>= "dev"}
  "uri"
  "checkseum" {>= "0.3.0"}
  "cmdliner" {>= "1.0.4"}
  "digestif" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.4.0"}
  "ppx_irmin" {>= "dev"}
  "conduit-lwt-unix" {>= "2.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/zshipko/irmin-server"
pin-depends: [
  [
    "ppx_irmin.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-git.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-fs.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-graphql.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-http.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-layers.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-pack.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-tezos.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-unix.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "irmin-test.dev"
    "git+https://github.com/mirage/irmin#cd464f8498201a9a046a99fd79579ecb9c03a92a"
  ]
  [
    "index.dev"
    "git+https://github.com/mirage/index#05ed4b06db49781446ce7f431ed492658eab37e2"
  ]
  [
    "repr.dev"
    "git+https://github.com/mirage/repr#ca94354ca2bcf58de6cd8c05979dd13612abcd2e"
  ]
  [
    "ppx_repr.dev"
    "git+https://github.com/mirage/repr#ca94354ca2bcf58de6cd8c05979dd13612abcd2e"
  ]
]
