opam-version: "2.0"
synopsis: "A high-performance server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-server"
doc: "https://zshipko.github.io/irmin-server"
bug-reports: "https://github.com/zshipko/irmin-server/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "optint" {>= "0.1.0"}
  "irmin"
  "irmin-pack" {>= "dev"}
  "irmin-unix" {>= "dev"}
  "irmin-tezos" {>= "dev"}
  "uri"
  "checkseum" {>= "0.3.0"}
  "cmdliner" {>= "1.0.4"}
  "digestif" {>= "0.9.0"}
  "logs" {>= "0.7.0"}
  "lwt" {>= "5.4.0"}
  "ppx_irmin" {>= "dev"}
  "conduit-lwt-unix" {>= "2.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/zshipko/irmin-server"
pin-depends: [
  [
    "ppx_irmin.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-git.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-fs.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-graphql.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-http.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-layers.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-pack.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-tezos.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-unix.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "irmin-test.dev"
    "git+https://github.com/mirage/irmin#8a8bf14936ea375ee331eba89f94ec550dde02e2"
  ]
  [
    "index.dev"
    "git+https://github.com/mirage/index#07bdd1b5da5737c92c743a65df685145ffdca603"
  ]
  [
    "repr.dev"
    "git+https://github.com/mirage/repr#031cbb3728c3394e46b25a5e77aa5ceaa674c235"
  ]
  [
    "ppx_repr.dev"
    "git+https://github.com/mirage/repr#031cbb3728c3394e46b25a5e77aa5ceaa674c235"
  ]
]
