(library
 (name bench_common)
 (modules bench_common)
 (package irmin-server-bench)
 (libraries irmin-server))

;; Require the above executables to compile during tests

(executable
 (name main)
 (modules main)
 (public_name irmin-server-bench)
 (package irmin-server-bench)
 (preprocess
  (pps ppx_irmin))
 (libraries irmin-server lwt unix cmdliner logs memtrace bench_common dataset))
