(library
 (name bench_common)
 (modules bench_common)
 (libraries irmin-server irmin-pack unix progress progress.unix uuidm))

;; Require the above executables to compile during tests

(rule
 (alias runtest)
 (package irmin-server-bench)
 (deps main.exe)
 (action (progn)))

(rule
 (alias runtest)
 (package irmin-server-bench)
 (deps overhead.exe)
 (action (progn)))

(library
 (name irmin_traces)
 (modules trace_common trace_definitions trace_collection)
 (preprocess
  (pps ppx_repr ppx_deriving.enum))
 (libraries irmin irmin-pack unix lwt repr ppx_repr bentov mtime
   mtime.clock.os))

(executable
 (name main)
 (modules main)
 (preprocess
  (pps ppx_deriving_yojson ppx_repr))
 (libraries
  irmin-server
  irmin-pack
  irmin-pack.layered
  irmin-test.bench
  irmin-layers
  irmin_traces
  lwt
  unix
  cmdliner
  logs
  yojson
  ppx_deriving_yojson
  memtrace
  repr
  ppx_repr
  bench_common
  mtime
  mtime.clock.os
  bentov
  tezos-context-hash-irmin))

(executable
 (name overhead)
 (modules overhead)
 (preprocess
  (pps ppx_deriving_yojson ppx_repr))
 (libraries
  benchmark
  irmin-server
  irmin-pack
  irmin-pack.layered
  irmin-test.bench
  irmin-layers
  irmin_traces
  lwt
  unix
  cmdliner
  logs
  memtrace
  repr
  ppx_repr
  bench_common
  mtime
  mtime.clock.os
  tezos-context-hash))
