(executables
 (names server)
 (libraries irmin.mem irmin-server fmt.tty)
 (modules server)
 (preprocess
  (pps ppx_irmin)))

(executables
 (names ping tree branches store)
 (libraries irmin.mem irmin-client-unix fmt.tty)
 (modules ping tree branches store)
 (preprocess
  (pps ppx_irmin)))

(alias
 (name examples)
 (deps server.exe ping.exe tree.exe branches.exe store.exe))

(alias
 (name runtest)
 (package irmin-server)
 (deps server.exe))

(alias
 (name runtest)
 (package irmin-client)
 (deps ping.exe tree.exe branches.exe))
