(executables
 (names server)
 (libraries irmin.mem irmin-server fmt.tty utils)
 (modules server)
 (preprocess
  (pps ppx_irmin)))

(executables
 (names ping tree store batch batch_commit sync)
 (libraries irmin.mem irmin-client-unix fmt.tty utils)
 (modules ping tree store batch batch_commit sync)
 (preprocess
  (pps ppx_irmin)))

(alias
 (name examples)
 (deps server.exe ping.exe tree.exe store.exe batch.exe batch_commit.exe))

(alias
 (name runtest)
 (package irmin-server)
 (deps server.exe))

(alias
 (name runtest)
 (package irmin-client)
 (deps ping.exe tree.exe))
